--- a/presentation_report/thesis/msc_report.tex
+++ b/presentation_report/thesis/msc_report.tex
@@ -10,15 +10,18 @@
 
 \thispagestyle{empty}
 \begin{center}
-
+%
 
 	\vspace*{6cm}{\bfseries\Huge
-	Functional Modeling with Neural Causal Models and Personalized Treatment Effect Estimation 
+	Causal Modeling with Neural Networks \\ [5mm]
+and \\ [5mm]
+Individualized Treatment Effect Estimation \\ [5mm]
+	}
 	
+	% Functional Modeling with Neural Causal Models and Personalized Treatment Effect Estimation 
 	% Modeling Functional Relationships in Causal Graphs and Estimating Individualized Interventions:\\[5mm]
 	% Neural Causal Models (TRAM-DAGs) and Conditional Average Treatment Effects
-	}
-
+	
   % \vspace*{6cm}{\bfseries\Huge
   % Neural Causal Models with TRAM-DAGs:\\[5mm]
   % Applied on real-world data \\[5mm]
@@ -135,7 +138,28 @@ This thesis contributes to the field of causal inference under observational dat
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\input{chapter03}
+
+\input{chapter_Exp1}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\input{chapter_Exp2}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\input{chapter_Exp3}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\input{chapter_Exp4}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+% \input{chapter03}  % not used anymore
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
