--- a/presentation_report/thesis/title.tex
+++ b/presentation_report/thesis/title.tex
@@ -8,8 +8,12 @@
 \setlength{\parindent}{0cm}
 \bf\Large% 
 
-Functional Modeling with Neural Causal Models \\
-and Personalized Treatment Effect Estimation 
+
+Causal Modeling with Neural Networks \\
+and Individualized Treatment Effect Estimation 
+
+% Functional Modeling with Neural Causal Models \\
+% and Personalized Treatment Effect Estimation 
 
 % Modeling Functional Relationships in Causal Graphs \\
 % and Estimating Individualized Interventions: \\
