--- a/presentation_report/thesis/biblio.bib
+++ b/presentation_report/thesis/biblio.bib
@@ -863,3 +863,17 @@ author = {J{\"u}rgen Schmidhuber},
 keywords = {Deep learning, Supervised learning, Unsupervised learning, Reinforcement learning, Evolutionary computation},
 abstract = {In recent years, deep artificial neural networks (including recurrent ones) have won numerous contests in pattern recognition and machine learning. This historical survey compactly summarizes relevant work, much of it from the previous millennium. Shallow and Deep Learners are distinguished by the depth of their credit assignment paths, which are chains of possibly learnable, causal links between actions and effects. I review deep supervised learning (also recapitulating the history of backpropagation), unsupervised learning, reinforcement learning \& evolutionary computation, and indirect search for short programs encoding deep and large networks.}
 }
+
+
+@inproceedings{papamakarios2017,
+ author = {Papamakarios, George and Pavlakou, Theo and Murray, Iain},
+booktitle = {Proceedings of the 31st International Conference on Neural Information Processing Systems (NeurIPS},
+ editor = {I. Guyon and U. Von Luxburg and S. Bengio and H. Wallach and R. Fergus and S. Vishwanathan and R. Garnett},
+pages = {2335--2344},
+numpages = {10},
+ publisher = {Curran Associates, Inc.},
+ title = {Masked Autoregressive Flow for Density Estimation},
+ url = {https://proceedings.neurips.cc/paper_files/paper/2017/file/6c1da886822c67822bcf3679d04369fa-Paper.pdf},
+ volume = {30},
+ year = {2017}
+}
