--- a/presentation_report/thesis/header.sty
+++ b/presentation_report/thesis/header.sty
@@ -11,6 +11,8 @@
 \usepackage{tikz}     % needed for plot of MA and DAG (methods Experiment 1)
 \usepackage{algorithmicx} % needed for algorithms
 \usepackage{algorithm} % needed for algorithms
+\usepackage{placeins} % for float placing
+\usepackage{bm} % for bold math symbols
 
 % \usepackage{float}  % force figures not to float with H
 \usepackage{lmodern} % for polish name
