--- a/presentation_report/thesis/chapter_Exp1.Rnw
+++ b/presentation_report/thesis/chapter_Exp1.Rnw
@@ -12,7 +12,7 @@ opts_chunk$set(
 @
 
 
-\chapter{Experiment 1: TRAM-DAG (simulation)}
+\chapter{Experiment 1: TRAM-DAG (simulation)} \label{ch:exp1}
 
 
 
