--- a/presentation_report/thesis/chapter_Exp2.tex
+++ b/presentation_report/thesis/chapter_Exp2.tex
@@ -7,7 +7,7 @@
 
 
 
-\chapter{Experiment 2: ITE on International Stroke Trial (IST)}
+\chapter{Experiment 2: ITE on International Stroke Trial (IST)} \label{ch:exp2}
 
 
 
